--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "tripplannr",
+  "subdomain": "tripplanner",
+  "version": "0.0.1-2",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "app.js"
+  },
+  "engines": {
+    "node": "0.8.x"
   },
   "dependencies": {
     "express": "3.0.0",
     "ejs": "*",
-    "stylus": "*"
+    "stylus": "0.30.1",
+    "mongojs": "0.4.6",
+    "yelp": "0.1.1",
+    "jquery": "1.8.2"
   }
 }
