--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tripplannr",
-  "subdomain": "tripplanner",
-  "version": "0.0.1-16",
+  "subdomain": "tripplannr",
+  "version": "0.0.1-24",
   "private": true,
   "scripts": {
     "start": "app.js"
